--- a/src/common/stylesheets/components/_view-popup.scss
+++ b/src/common/stylesheets/components/_view-popup.scss
@@ -140,6 +140,9 @@
 	}
 
 	iframe {
+		display: flex;
+		width: 100%;
+		border: 0;
 		max-height: 300px;
 	}
 }
